--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "nodejs-console-app1",
+  "name": "data-model-mapper",
   "version": "0.0.0",
-  "description": "NodejsConsoleApp1",
-  "main": "app.js",
+  "description": "DataModelMapper",
+  "main": "mapper.js",
   "author": {
     "name": "Ermanno Mastrosimone"
   },
   "dependencies": {
     "JSONStream": "^1.3.3",
+    "body-parser": "^1.18.3",
     "csv-stream": "^0.2.0",
+    "express": "^4.16.3",
     "geojson-stream": "0.0.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
+    "multer": "^1.4.0",
     "nconf": "^0.10.0",
     "node-request-queue": "^1.0.2",
     "promise-queue": "^2.2.5",
