--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "csv-stream": "^0.2.0",
     "express": "^4.16.3",
     "geojson-stream": "0.0.1",
+    "is-valid-path": "^0.1.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
     "multer": "^1.4.0",
     "nconf": "^0.10.0",
     "node-request-queue": "^1.0.2",
+    "parse-filepath": "^1.0.2",
     "promise-queue": "^2.2.5",
     "promise-request-retry": "^1.0.1",
     "request": "^2.87.0",
