--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "JSONStream": "^1.3.3",
     "body-parser": "^1.18.3",
+    "connect-busboy": "0.0.2",
     "csv-stream": "^0.2.0",
     "express": "^4.16.3",
     "geojson-stream": "0.0.1",
+    "is-file-stream": "^1.0.0",
     "is-valid-path": "^0.1.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
@@ -23,6 +25,7 @@
     "promise-request-retry": "^1.0.1",
     "request": "^2.87.0",
     "simple-node-logger": "^0.93.37",
+    "stream-to-string": "^1.1.0",
     "unorm": "^1.4.1",
     "winston": "^3.0.0",
     "winston-daily-rotate-file": "^3.3.0"
