--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.1",
     "connect-busboy": "0.0.2",
+    "cors": "^2.8.5",
     "csv-stream": "^0.2.0",
-    "express": "^4.16.3",
+    "express": "^4.18.2",
+    "filereader": "^0.10.3",
     "geojson-stream": "0.0.1",
     "is-file-stream": "^1.0.0",
     "is-valid-path": "^0.1.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
     "multer": "^1.4.0",
-    "nconf": "^0.10.0",
+    "nconf": "^0.12.0",
     "node-request-queue": "^1.0.2",
+    "nodemon": "^2.0.20",
     "parse-filepath": "^1.0.2",
     "promise-queue": "^2.2.5",
     "promise-request-retry": "^1.0.1",
@@ -29,5 +32,8 @@
     "unorm": "^1.4.1",
     "winston": "^3.0.0",
     "winston-daily-rotate-file": "^3.3.0"
+  },
+  "scripts": {
+    "start": "nodemon ./mapper.js"
   }
 }
