--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "request": "^2.87.0",
     "simple-node-logger": "^0.93.37",
     "stream-to-string": "^1.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
     "unorm": "^1.4.1",
     "winston": "^3.0.0",
     "winston-daily-rotate-file": "^3.3.0"
