--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ logs/
 config.js
 result.json
 examples/sourceFileTemp.*
-dataModels/DataModel.json
+dataModels/DataModelTemp.json
+dataModels/ExampleDataModel.json
 testing/
 
 # History
