--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "is-valid-path": "^0.1.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
+    "mongoose": "^7.0.0",
     "multer": "^1.4.0",
     "nconf": "^0.12.0",
     "node-request-queue": "^1.0.2",
