--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ Funzionalità.docx
 Funzionalità.pdf
 dataModels/test_nested_datamodel.json
 debug.txt
+dataModels/schema.json
+dataModels/schema1.json
+dataModels/schema2.json
+dataModels/Test.json
