--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "JSONStream": "^1.3.3",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
+    "chai": "^4.3.7",
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "csv-stream": "^0.2.0",
@@ -19,6 +21,7 @@
     "is-valid-path": "^0.1.1",
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.0",
     "nconf": "^0.12.0",
@@ -27,8 +30,10 @@
     "parse-filepath": "^1.0.2",
     "promise-queue": "^2.2.5",
     "promise-request-retry": "^1.0.1",
+    "readline-sync": "^1.4.10",
     "request": "^2.87.0",
     "simple-node-logger": "^0.93.37",
+    "sinon": "^15.0.2",
     "stream-to-string": "^1.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
@@ -37,6 +42,7 @@
     "winston-daily-rotate-file": "^3.3.0"
   },
   "scripts": {
-    "start": "nodemon ./mapper.js"
+    "start": "nodemon ./mapper.js",
+    "test": "node ./node_modules/mocha/bin/mocha"
   }
 }
