--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
      - 5500:5500
    restart: always
   db:
-       image: mongo
+       image: mongo:4.4
        ports:
          - 27017:27017
        volumes:
