--- a/frontend_2/angular.json
+++ b/frontend_2/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "service-catalogue-manager": {
+    "data-model-mapper-gui": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "service-catalogue-manager:build"
+            "browserTarget": "data-model-mapper-gui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "service-catalogue-manager:build:production"
+              "browserTarget": "data-model-mapper-gui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "service-catalogue-manager:build"
+            "browserTarget": "data-model-mapper-gui:build"
           }
         },
         "test": {
@@ -112,7 +112,7 @@
         }
       }
     },
-    "service-catalogue-manager-e2e": {
+    "data-model-mapper-gui-e2e": {
       "root": "",
       "sourceRoot": "",
       "projectType": "application",
@@ -121,7 +121,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "service-catalogue-manager:serve"
+            "devServerTarget": "data-model-mapper-gui:serve"
           }
         },
         "lint": {
@@ -133,7 +133,7 @@
       }
     }
   },
-  "defaultProject": "service-catalogue-manager",
+  "defaultProject": "data-model-mapper-gui",
   "schematics": {
     "@schematics/angular:component": {
       "styleext": "scss"
