--- a/frontend_2/docker-compose.prod.yml
+++ b/frontend_2/docker-compose.prod.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 services:
   data-model-mapper-gui:
-    image: capesuite/data-model-mapper-gui:latest
+    image: data-model-mapper-gui:latest
     build:
       context: .
       args:
         BASE_HREF: /data-model-mapper-gui/
     ports:
-      - "81:80"
+      - "12345:80"
     volumes:
       - ./src/assets/config.prod.json:/usr/share/nginx/html/assets/config.json
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
