--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -1,7 +1,7 @@
 {
   "system": {
     "checkConsentAtOperator": false,
-    "serviceEditorUrl": "http://localhost:12345/data-model-mapper-gui",
+    "dmmGuiUrl": "http://localhost:12345/data-model-mapper-gui",
     "auth": {
       "idmHost": "https://idm.cape-suite.eu/auth",
       "clientId": "cape-service-sdk",
@@ -10,14 +10,11 @@
       "authRealm": "Cape"
     },
     "mailTo":"support@dmm.eu",
-    "detailedErrors" : true,
-    "country" : "Italy"
+    "detailedErrors" : true
   },
   "data_model_mapper" : {
     "default_mapper_url":"http://localhost:5500/api/map/transform",
-    "default_mapper_base_url":"http://localhost:5500/api",
-    "default_map_ID" : "map_1",
-    "connect" : true
+    "default_mapper_base_url":"http://localhost:5500/api"
   },
   "i18n": {
     "locale": "en",
