--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
     "start": "ng serve --port 12345",
+    "s":"ng serve --port 12345 --host=0.0.0.0 --disable-host-check",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
