--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,8 +6,8 @@ server {
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
-		
+        try_files $uri $uri/ data-model-mapper-gui/index.html;
+
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE';
      if ($request_method = 'OPTIONS') {
@@ -23,17 +23,17 @@ server {
 
         return 204;
      }
-		
+
 	if ($request_method = 'DELETE') {
-	 
+
 	    add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'DELETE';
-	 
+
 	 }
-		
+
     }
-	
-	
-	
-	
+
+
+
+
 }
