--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
     "start": "ng serve --port 12345",
-    "s":"ng serve --port 12345 --host=0.0.0.0 --disable-host-check",
+    "s": "ng serve --port 12345 --host=0.0.0.0 --disable-host-check",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -47,6 +47,7 @@
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
+    "@ngx-config/core": "^9.0.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@swimlane/ngx-charts": "17.0.1",
