--- a/frontend/docker-compose.prod.yml
+++ b/frontend/docker-compose.prod.yml
@@ -1,23 +1,19 @@
 version: "3.8"
 services:
   data-model-mapper-gui:
-    image: data-model-mapper-gui:latest
+    image: data-model-mapper-gui
     build:
       context: .
+      dockerfile: Dockerfile.prod
       args:
         BASE_HREF: /data-model-mapper-gui/
     ports:
-      - "12345:80"
+      - "12345:12345"
     volumes:
-      - ./src/assets/config.prod.json:/usr/share/nginx/html/assets/config.json
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - cape-network
-
-
-networks:
- cape-network:
-   name: data-model-mapper-gui-network
-   driver: bridge
-   driver_opts:
-     com.docker.network.driver.mtu: 1400
+      - ./src/assets/config.json:/app/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/home/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/dmm-editor/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/login/assets/config.json
+      - ./src/assets/config.json:/app/data-model-mapper-gui/login/loginPopup/assets/config.json
