update docker compose

--- a/frontend/docker-compose.prod.yml
+++ b/frontend/docker-compose.prod.yml
@@ -10,10 +10,10 @@ services:
     ports:
       - "12345:12345"
     volumes:
-      - ./src/assets/config.json:/app/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/home/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/pages/dmm-editor/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/login/assets/config.json
-      - ./src/assets/config.json:/app/data-model-mapper-gui/login/loginPopup/assets/config.json
+      - ./src/assets/config.prod.json:/app/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/pages/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/pages/home/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/pages/dmm-editor/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/login/assets/config.json
+      - ./src/assets/config.prod.json:/app/data-model-mapper-gui/login/loginPopup/assets/config.json
