--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "json-mapper": "0.0.12",
     "json-schema-ref-parser": "^5.1.2",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^7.1.3",
     "mocha": "^10.2.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.4",
