--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -61,6 +61,21 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "login": {
+              "outputPath": "dist/login"
+            },
+            "loginPopup": {
+              "outputPath": "dist/login/loginPopup"
+            },
+            "pages": {
+              "outputPath": "dist/pages"
+            },
+            "dmm": {
+              "outputPath": "dist/pages/dmm-editor"
+            },
+            "home": {
+              "outputPath": "dist/pages/home"
             }
           }
         },
@@ -94,7 +109,6 @@
               "node_modules/typeface-exo/index.css",
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
               "node_modules/ionicons/scss/ionicons.scss",
-              "node_modules/font-awesome/scss/font-awesome.scss",
               "node_modules/socicon/css/socicon.css",
               "node_modules/nebular-icons/scss/nebular-icons.scss",
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
