--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ frontend/src/assets/bikeCiclabili.json
 backend/examples/
 backend/src/validation.log
 backend/log*.json
+backend/src/utils/threads.js
