--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -15,7 +15,8 @@
   "data_model_mapper" : {
     "default_mapper_url":"http://localhost:5500/api/map/transform",
     "default_mapper_base_url":"http://localhost:5500/api",
-    "minioCache" : true
+    "minioCache" : false,
+    "minioBuckets" : ["datamodelmapper"]
   },
   "i18n": {
     "locale": "en",
