--- a/frontend/src/assets/config.prod.json
+++ b/frontend/src/assets/config.prod.json
@@ -15,7 +15,8 @@
   "data_model_mapper" : {
     "default_mapper_url":"https://platform.beopen-dep.it/api/map/transform",
     "default_mapper_base_url":"https://platform.beopen-dep.it/api",
-    "minioCache" : false
+    "minioCache" : false,
+    "minioBuckets" : ["datamodelmapper"]
   },
   "i18n": {
     "locale": "en",
