--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,44 @@
 version: "3.8"
 services:
   data-model-mapper-gui:
-    image: https://github.com/opsilab/data-model-mapper.git#frontend
+    image: data-model-mapper-gui
     build:
-      context: frontend
-      dockerfile: ./frontend/Dockerfile
+      context: https://github.com/OPSILab/data-model-mapper.git#frontend_dev
+      dockerfile: ./gui
       args:
         BASE_HREF: /data-model-mapper-gui/
     ports:
-      - "12345:80"
+      - "127.0.0.1:12345:12345"
     volumes:
-      - ./src/assets/config.json:/usr/share/nginx/html/assets/config.json
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - cape-network
-  data-model-mapper:
-    image: https://github.com/opsilab/data-model-mapper.git#frontend
+      - ./config.prod.json:/app/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/pages/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/pages/home/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/pages/account/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/pages/dmm-editor/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/login/assets/config.json
+      - ./config.prod.json:/app/data-model-mapper-gui/login/loginPopup/assets/config.json
+  data-model-mapper-backend:
+    image: data-model-mapper-backend
     build: 
-      context: backend
-      dockerfile: ./backend/Dockerfile
-    container_name: data_model_mapper
+      context: https://github.com/OPSILab/data-model-mapper.git#frontend_dev
+      dockerfile: ./server
+    container_name: data-model-mapper-backend
     depends_on:
       - db     
     ports:
-     - 5500:5500
+     - 127.0.0.1:5500:5500
     restart: always
+    volumes:
+     - ./config.beopen.js:/app/config.js
   db:
     image: mongo:4.4
-    ports:
-      - 27017:27017
+    container_name: data-model-mapper-db
+       #ports:
+       #  - 27017:27017
     volumes:
-      - db_data:/data/db
+         - db_data:/data/db
     restart: unless-stopped
 
 volumes:
   db_data:
-
-networks:
- cape-network:
-   name: data-model-mapper-gui-network
-   driver: bridge
-   driver_opts:
-     com.docker.network.driver.mtu: 1400
