fix bug : objects are now only visibile for creating user; updated mailto mail

--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -9,7 +9,7 @@
       "authProfile": "oidc",
       "authRealm": "master"
     },
-    "mailTo":"support@dmm.eu",
+    "mailTo":"antonio.filograna@eng.it",
     "detailedErrors" : true
   },
   "data_model_mapper" : {
