swagger refactoring and minio endpoint protected

--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "start": "node ./mapper.js",
+    "start:ignore": "nodemon --ignore 'dataModels/*.*' --ignore 'input/*.*' ./mapper.js",
     "start:dev": "nodemon ./mapper.js",
     "test": "node ./node_modules/mocha/bin/mocha --timeout 0"
   }
