--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,15 +1,21 @@
 version: '3'
 services:
-  data_model_mapper:
-   image: data_model_mapper:2.4
-   container_name: data_model_mapper
-   depends_on:
-    - db     
-   ports:
-     - 5500:5500
-   restart: always
+  data-model-mapper-backend:
+    image: engineeringopsilab/data-model-mapper-backend
+    build: 
+      context: .
+      #dockerfile: 
+    container_name: data-model-mapper-backend
+    depends_on:
+      - db     
+    ports:
+     - 127.0.0.1:5500:5500
+    restart: always
+    volumes:
+     - ./config.js:/app/config.js
   db:
        image: mongo:4.4
+       container_name: data-model-mapper-db
        ports:
          - 27017:27017
        volumes:
