--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,6 @@ COPY ./mapper.js ./
 COPY ./LICENSE ./
 COPY ./package*.json ./
 RUN npm install
+RUN date > /app/date.txt
+RUN sed -i 's/localhost/host.docker.internal/g' /app/config.js
 CMD ["node", "mapper"]
