--- a/frontend/docker-compose.prod.yml
+++ b/frontend/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   data-model-mapper-gui:
-    image: data-model-mapper-gui
+    image: engineeringopsilab/data-model-mapper-gui
     build:
       context: .
       dockerfile: Dockerfile.prod
