--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -5,3 +5,6 @@ dataModels/schema1.json
 dataModels/schema2.json
 dataModels/nonNgsi.json
 docs/tests/NonNGSI/NonNGSI - Copia.bat
+
+**/config.json
+**/config.js
