--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.spec.ts.template
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.spec.ts.template
@@ -1,3 +1,4 @@
+//This was generated automatically
 import { ComponentFixture, TestBed } from '@angular/core/testing';
 
 import { CreateMapComponent } from './create-map.component';
