--- a/orion.yml
+++ b/orion.yml
@@ -9,6 +9,7 @@ services:
   
   orion:
     image: fiware/orion-ld
+    restart: "always"
     depends_on:
       - mongo
     command: -dbhost mongo
