--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build-frontend:
+    if: contains(github.event.head_commit.message, 'frontend/') || contains(github.event.commits.*.modified, 'frontend/') || contains(github.event.head_commit.message, 'gui') || contains(github.event.commits.*.modified, 'gui') 
     runs-on: ubuntu-latest
 
     steps:
@@ -38,6 +39,7 @@ jobs:
             BASE_HREF = /data-model-mapper-gui/
     
   build-backend:
+            if: contains(github.event.head_commit.message, 'backend/') || contains(github.event.commits.*.modified, 'backend/') || contains(github.event.head_commit.message, 'server') || contains(github.event.commits.*.modified, 'server') 
             runs-on: ubuntu-latest
         
             steps:
