--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ deploy_server-linux
 mongo.yml
 docker-compose-always-pull.yml
 backend/src/utils/common_dev.js
+frontend/src/app/pages/data-model-mapper/next/
+frontend/src/app/pages/data-model-mapper/testModule.ts
