--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "name": "Ermanno Mastrosimone"
   },
   "dependencies": {
+    "@maptiler/client": "^2.0.0",
     "axios": "^1.7.5",
     "body-parser": "^1.20.1",
     "chai": "^4.3.7",
@@ -28,10 +29,11 @@
     "mongoose": "^7.8.1",
     "multer": "^1.4.4",
     "nconf": "^0.12.0",
+    "node-fetch": "^3.3.2",
     "node-request-queue": "^1.0.2",
     "nodemon": "^2.0.20",
     "parse-filepath": "^1.0.2",
-    "proj4": "^2.12.0",
+    "proj4": "^2.14.0",
     "promise-queue": "^2.2.5",
     "promise-request-retry": "^1.0.1",
     "readline-sync": "^1.4.10",
