multiple request : first step

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ docker-compose-always-pull.yml
 backend/src/utils/common_dev.js
 frontend/src/app/pages/data-model-mapper/next/
 frontend/src/app/pages/data-model-mapper/testModule.ts
+backend/src/writers/orionWriter.old.js
