--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "csv-stream": "^0.2.0",
+    "data-model-mapper": "file:",
     "express": "^4.18.2",
     "filereader": "^0.10.3",
     "geojson-stream": "0.0.1",
