--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -3,7 +3,7 @@
     "checkConsentAtOperator": false,
     "dmmGuiUrl": "http://localhost:12345/data-model-mapper-gui",
     "auth": {
-      "idmHost": "https://platform.beopen-dep.it/auth",
+      "idmHost": "https://platform.beopendep.it/auth",
       "clientId": "beopen-dashboard",
       "disableAuth": "false",
       "authProfile": "oidc",
