--- a/minio.template.yml
+++ b/minio.template.yml
@@ -11,7 +11,7 @@ services:
     environment:
       MINIO_ROOT_USER: 
       MINIO_ROOT_PASSWORD: 
-      MINIO_IDENTITY_OPENID_CONFIG_URL: https://platform.beopen-dep.it/auth/realms/master/.well-known/openid-configuration
+      MINIO_IDENTITY_OPENID_CONFIG_URL: https://platform.beopendep.it/auth/realms/master/.well-known/openid-configuration
       MINIO_BROWSER_REDIRECT_URL: 'http://localhost:9001'
       MINIO_IDENTITY_OPENID_CLIENT_ID: 
       MINIO_IDENTITY_OPENID_CLIENT_SECRET: 
