--- a/frontend/src/assets/config.prod.json
+++ b/frontend/src/assets/config.prod.json
@@ -1,9 +1,9 @@
 {
   "system": {
     "checkConsentAtOperator": false,
-    "dmmGuiUrl": "https://platform.beopen-dep.it/data-model-mapper-gui",
+    "dmmGuiUrl": "https://platform.beopendep.it/data-model-mapper-gui",
     "auth": {
-      "idmHost": "https://platform.beopen-dep.it/auth",
+      "idmHost": "https://platform.beopendep.it/auth",
       "clientId": "beopen-dashboard",
       "disableAuth": "false",
       "authProfile": "oidc",
@@ -13,8 +13,8 @@
     "detailedErrors" : true
   },
   "data_model_mapper" : {
-    "default_mapper_url":"https://platform.beopen-dep.it/api/map/transform",
-    "default_mapper_base_url":"https://platform.beopen-dep.it/api",
+    "default_mapper_url":"https://platform.beopendep.it/api/map/transform",
+    "default_mapper_base_url":"https://platform.beopendep.it/api",
     "minioCache" : false,
     "minioBuckets" : []
   },
