--- a/frontend/package.json
+++ b/frontend/package.json
@@ -104,6 +104,7 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
+    "autoprefixer": "^10.4.21",
     "conventional-changelog-cli": "2.1.1",
     "eslint": "7.25.0",
     "eslint-config-prettier": "8.3.0",
@@ -122,10 +123,12 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "ng2-completer": "9.0.1",
     "npm-run-all": "4.1.5",
+    "postcss": "^8.5.6",
     "prettier": "2.2.1",
     "protractor": "~7.0.0",
     "rimraf": "3.0.2",
     "stylelint": "13.13.1",
+    "tailwindcss": "^2.2.19",
     "ts-node": "9.1.1",
     "typescript": "~4.1.0"
   }
