--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,6 +33,7 @@
               "node_modules/nebular-icons/scss/nebular-icons.scss",
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
               "src/app/@theme/styles/styles.scss",
+              "src/app/@theme/styles/styles.css",
               "node_modules/select2/dist/css/select2.min.css",
               "node_modules/jsoneditor/dist/jsoneditor.css"
             ],
