--- a/frontend/src/assets/config.prod.json
+++ b/frontend/src/assets/config.prod.json
@@ -9,17 +9,23 @@
       "authProfile": "oidc",
       "authRealm": "master"
     },
-    "mailTo":"antonio.filograna@eng.it",
-    "detailedErrors" : true
+    "mailTo": "antonio.filograna@eng.it",
+    "detailedErrors": true
   },
-  "data_model_mapper" : {
-    "default_mapper_url":"https://platform.beopendep.it/api/map/transform",
-    "default_mapper_base_url":"https://platform.beopendep.it/api",
-    "minioCache" : false,
-    "minioBuckets" : []
+  "data_model_mapper": {
+    "default_mapper_url": "https://platform.beopendep.it/api/map/transform",
+    "default_mapper_base_url": "https://platform.beopendep.it/api",
+    "minioCache": false,
+    "minioBuckets": [],
+    "alwaysPromptSaveSource": false,
+    "alwaysPromptSaveSchema": false,
+    "helpUrl": "https://beopen-project.github.io/data-model-mapper/"
   },
   "i18n": {
     "locale": "en",
-    "languages": ["it","en"]
+    "languages": [
+      "it",
+      "en"
+    ]
   }
 }
