--- a/frontend/package.json
+++ b/frontend/package.json
@@ -100,6 +100,7 @@
     "@types/d3-color": "2.0.1",
     "@types/jasmine": "3.6.9",
     "@types/jasminewd2": "2.0.8",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "14.14.37",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.22.1",
