--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -4,7 +4,7 @@ RUN mkdir -p /app
 WORKDIR /app
 COPY package.json /app
 
-RUN npm install
+RUN npm install --legacy-peer-deps
 RUN date > /app/date.txt
 COPY . /app
 RUN npm run build -- --prod --aot --base-href $BASE_HREF
